[gd_scene load_steps=18 format=3 uid="uid://7pwe60a0qt6u"]

[ext_resource type="Texture2D" uid="uid://dee3m5udbl6gf" path="res://assets/enemy_epikness.aseprite.png" id="1_x4qua"]
[ext_resource type="Script" path="res://Scenes/enemy.gd" id="1_yt0l8"]
[ext_resource type="Texture2D" uid="uid://blda3y8tfgd1" path="res://enemy_death.aseprite.png" id="2_6tbai"]
[ext_resource type="AudioStream" uid="uid://ovudg7ipnje1" path="res://assets/dsoof.wav" id="3_443qe"]
[ext_resource type="AudioStream" uid="uid://bgqqjwmxplulw" path="res://dspodth3.wav" id="5_5s6jh"]

[sub_resource type="Curve2D" id="Curve2D_60sge"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 14, -3, 0, 0, 0, 0, 15, 68, 0, 0, 0, 0, -89, 72, 0, 0, 0, 0, -87, -3, 0, 0, 0, 0, 13, -3, 0, 0, 0, 0, 14, -3, 0, 0, 0, 0, 120, -19, 0, 0, 0, 0, 691, -62, 0, 0, 0, 0, 718, 2, 0, 0, 0, 0, 709, 36, 0, 0, 0, 0, 709, 36, 0, 0, 0, 0, 709, 36)
}
point_count = 12

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8e2"]
atlas = ExtResource("2_6tbai")
region = Rect2(0, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_voyv0"]
atlas = ExtResource("2_6tbai")
region = Rect2(27, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxncf"]
atlas = ExtResource("2_6tbai")
region = Rect2(54, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik64m"]
atlas = ExtResource("2_6tbai")
region = Rect2(81, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5lgn"]
atlas = ExtResource("2_6tbai")
region = Rect2(108, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng5gh"]
atlas = ExtResource("2_6tbai")
region = Rect2(135, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xknm"]
atlas = ExtResource("2_6tbai")
region = Rect2(162, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6ixq"]
atlas = ExtResource("1_x4qua")
region = Rect2(0, 0, 27, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_1osnt"]
atlas = ExtResource("1_x4qua")
region = Rect2(0, 23, 27, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_na3nw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voyv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxncf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik64m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5lgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng5gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xknm")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6ixq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1osnt")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0nhqy"]
radius = 11.0

[node name="Enemy" type="Node2D" groups=["Enemy"]]
z_index = -1
script = ExtResource("1_yt0l8")

[node name="Shoot_Timer" type="Timer" parent="."]
one_shot = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_60sge")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(14, -3)
rotation = 1.55671

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D" groups=["Enemy"]]
collision_layer = 257

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Path2D/PathFollow2D/Area2D"]
sprite_frames = SubResource("SpriteFrames_na3nw")
animation = &"dead"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Area2D"]
shape = SubResource("CircleShape2D_0nhqy")

[node name="DetectionArea" type="Area2D" parent="Path2D/PathFollow2D/Area2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Path2D/PathFollow2D/Area2D/DetectionArea"]
position = Vector2(-1, -2)
polygon = PackedVector2Array(76.8516, -57.9377, 101.201, -11.5902, 102.807, 16.4352, 76.246, 56.0651, 1, 3)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_443qe")
volume_db = 24.0
bus = &"SFX"

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5s6jh")
bus = &"SFX"

[connection signal="timeout" from="Shoot_Timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="mouse_entered" from="Path2D/PathFollow2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Path2D/PathFollow2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
